module(
    name = "pizza-parlor",
    version = "0.1.0",
    repo_name = "com_github_tnarg_pizza_parlor",
)

bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@pizza-parlor//:go.mod")
use_repo(
    go_deps,
    "com_github_alecthomas_repr",
)
